test/parser/ast/string_literal/invalid_hex_escape_error1.myte
module test

fun main() {
  "\x";
}